<resources>
    <string name="app_name">common_base</string>
    <string name="loading">Loading..</string>
    <string name="pair_please_confirm_your_selection">Please confirm your selection</string>
    <string name="my_solo">1 on 1 Support</string>
    <string name="curing_unlock_tips">During the drying period, we can use the wet weight as a reference to help us determine when we\'ve satisfied the drying requirements.</string>
    <string name="unlock_curing">You\'re about to unlock curing\u00A0</string>
    <string name="start_growing">Start your next growing journey</string>
    <string name="complete_desc">Harvest #%s Complete</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="profile_name">Nickname</string>
    <string name="profile_abby_id">Abby ID</string>
    <string name="profile_email">Email</string>
    <string name="profile_edit_nickname">Enter your nickname</string>
    <string name="base_ok">OK</string>
    <string name="setting_sub_desc">The Digital service starts from the activation time (or when the Digital service package is purchased); the activation time is when abby is connected to the internet for the first time</string>
    <string name="about_learn">Learn about “heyabby”</string>
    <string name="about_rate">Leave a review</string>
    <string name="about_terms">Terms of Use</string>
    <string name="about_policy">Privacy Policy</string>
    <string name="setting_sub_time">No Digital Service</string>
    <string name="setting_sub_charge_time">Extend Digital Service Validity</string>
    <string name="home_great_tips">Great! Now that you\'re prepared, let‘s put the clone in the grow box.\u00A0</string>
    <string name="home_start">Start</string>
    <string name="setting_delete_device">After deleting this device, it will be restored to factory settings and will no longer be associated with your account. Your planting records, however, will not be deleted.\u00A0</string>
    <string name="setting_replant_tips">After clicking \'Replant\', the device will switch to first week planting mode.</string>
    <string name="firmware_update_compulsion">Please update your firmware to ensure the best user experience</string>
    <string name="setting_update_success">Update Successful</string>
    <string name="update_wait">Please wait…</string>
    <string name="profile_request_camera">Authorize hey abby to access your camera</string>
    <string name="profile_request_photo">Authorize hey abby to access your camera</string>
    <string name="profile_request_sd_card">Authorize hey Abby to access your memory card</string>
    <string name="private_policy">Your privacy is important to us. By continuing to use our product and services, you are confirming that you have read and accepted our</string>
    <string name="terms_us">Terms of Use</string>
    <string name="policy">Privacy Policy</string>
    <string name="send_email">We sent an email to\u00A0</string>
    <string name="send_phone">We sent an OTP to\u00A0</string>
    <string name="send_email_register">\u00A0Enter the verification code sent to your email address.</string>
    <string name="send_email_for_sms_register">\u00A0Enter the verification code sent to your telephone.</string>
    <string name="register_email_tips">\u00A0Enter the verification code sent to your email address. Then reset your password.\u00A0</string>
    <string name="register_email_dont_tips">Didn‘t receive email?</string>
    <string name="login_account_empty">Please enter username</string>
    <string name="login_password_empty">Please enter password</string>
    <string name="home_fattening">Moving forward, you will use a full pod of fertilizer. Add the two on opposite sides of the tank to avoid chemical reaction.\n\n*Note: you must cut open the packets first</string>
    <string name="home_done">Done</string>
    <string name="deivce_can_not_find">Cannot find your device</string>
    <string name="device_try">You can try the following:</string>
    <string name="permission_location_tips">Enable location permission to view nearby Wi-Fi networks</string>
    <string name="pair_fail_title">Network Connection Error</string>
    <string name="pair_try">Please try the following:</string>
    <string name="pair_fail">Please try again. This may take a few minutes, and your device will not work during the upgrade process. Please do not power off or reset during the update</string>
    <string name="guide_tips">You have Job to do.</string>
    <string name="profile_sign_out">Sign out of account</string>
    <string name="profile_nickname_tips">Must be between 4 and 24 characters</string>
    <string name="curing_plant_weight">Enter the total weight (g)</string>
    <string name="password_tips">Your password must contain</string>
    <string name="turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="my_nickname">Nickname</string>
    <string name="pair_select_wi_fi_network">Select Wi-Fi Network</string>
    <string name="my_trouble">Troubleshooting</string>
    <string name="my_how">How to</string>
    <string name="my_settings">Settings</string>
    <string name="my_about">About us</string>
    <string name="my_calendar">Calendar</string>
    <string name="my_clone_desc">Start your planting journey from seed or clone?</string>
    <string name="my_next">Next</string>
    <string name="my_seed_desc">In order to develop a planting plan more suitable for your strain, please select a type.</string>
    <string name="my_sedd_photo">Photo （Recommended）</string>
    <string name="my_auto">Auto</string>
    <string name="mt_about_desc">Have no idea about the strain?</string>
    <string name="my_strain_name">Enter Your Strain Name</string>
    <string name="my_hint_strain_name">eg. OG Kush..</string>
    <string name="my_strain_how">Have no idea about the strain?</string>
    <string name="my_not_know">I don’t know</string>
    <string name="base_pump_start_desc">Abby will pause for every %s of water drained in case of overflow.</string>
    <string name="base_pump_stop_dec">Click to resume draining</string>
    <string name="base_pump_auto_start_desc">Make sure there is enough space for drainage and resume draining</string>
    <string name="strain_name_desc">Please enter a strain name within 24 bytes</string>
    <string name="base_done">I am Done~</string>
    <string name="base_complete">Planting Complete</string>
    <string name="base_no_starin_name_desc">In order to develop a further planting plan more suitable for your strain, please select a type. Which Does not affect your current planting progress</string>
    <string name="seed_attribute">\"Photo seeds will produce higher yields, while auto seeds can be harvested sooner. Most of our abby growers choose photo seeds. For more details, please contact your local seed distributor. \"</string>
    <string name="seed_strain_name">Strains are variations of the same plant species. You can learn more about different strains from your local clone distributor. The information collected here is only for our records. In this version, it will not affect your planting schedule.</string>
    <string name="my_confirm">Confirm</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="my_to_do">Do you want to %s now?</string>
    <string name="my_go">Go</string>
    <string name="my_remind_me">Remind Me</string>
    <string name="my_cancel">Cancel</string>
    <string name="my_calendar_permisson">To use reminders for the first time, you need to authorize abby to access your calendar in order to create task reminders</string>
    <string name="my_guide_seed_desc">You have finished the set up process. \n\nIn the following days, follow the task reminders in the app calendar as well as complete tasks such as water changes on time, and your seeds will germinate smoothly!</string>
    <string name="my_no_task">No task today~</string>
    <string name="base_please_try_again">Please set the reminder time later than the current time</string>
    <string name="base_seed_to_veg">Insert the black sponge into the plant basket, avoiding light exposure to water, affecting water quality</string>
    <string name="base_fertilizer">Put half a pod of both the silver and gold fertilizer as instructed</string>
    <string name="base_remind_me">Not Ready，Remind me 2 days later ></string>
    <string name="base_supply">Purchase supply pack</string>
    <string name="base_og">eg. OG Kush..</string>
    <string name="mt_seed_desc">Have no idea about this?</string>
    <string name="base_water_already">I have already drained</string>
    <string name="base_feet_fall">The fertilizer will drop within 5 minutes one after the other, which prevents the fertilizer from chemically reacting</string>
    <string name="base_feet_fall_button_text">Got it!</string>
    <string name="base_dont_show">Don’t show it again</string>
    <string name="base_autoflowering_abbreviations">AutoFLW</string>
    <string name="base_job">Job’s Done</string>
    <string name="noti_text_expression">[Expression]</string>
    <string name="is_contact_customer">Being contact customer service, please wait...</string>
    <string name="is_contact_customer_failure_seconed">Contact customer service failure:</string>
    <string name="chat_row_satisfaction_content">Please make evaluation to my service!</string>
    <string name="chatrow_eval_btn_text">Evaluation</string>
    <string name="em_notice_sending">Sending</string>
    <string name="home_bind_device">Know more about hey abby growing box</string>
    <string name="home_go">Go</string>
    <string name="my_cache">Cache</string>
    <string name="home_academy">Academy</string>
    <string name="home_instrusctors">Abby Instrusctors</string>
    <string name="my_appversion">The current version is up-to-date.</string>
    <string name="string_10">OK</string>
    <string name="string_263">Slide to Unlock</string>
    <string name="string_1393">Done</string>
    <string name="string_1479">To ensure your safety, the fan will stop and the light will be dimmed when the grow box door is opening.I Therefore, we kindly ask that you do not change the fan settings while the door is open.</string>
    <string name="string_1515">Save</string>
    <string name="string_1591">Share</string>
    <string name="string_1666">Terms of Use</string>
    <string name="string_1667">Privacy Policy</string>
    <string name="award">Award</string>
    <string name="my_delete">Delete</string>
    <string name="upgrade">Upgrade</string>
    <string name="load_preset">Load Preset</string>
    <string name="select_a_preset">Select a Preset</string>
    <string name="home_are_you_sure_to_sign_out_of_account">Are you sure to sign out of account?</string>
    <string name="home_load">Load</string>
    <string name="planting_notes">Notes</string>
    <string name="home_do_not_remind_me_again">Do not remind me again</string>
    <string name="string_2005">The door will open automatically when unlocked</string>
    <string name="string_2007">Unlocked!</string>
    <string name="string_2133">Feedback</string>
    <string name="string_2145">Rate the app</string>
    <string name="string_2146">Rate us on Trustpilot</string>
    <string name="string_2147">Discord Community</string>
    <string name="string_2148">Instagram</string>
    <string name="string_2149">About</string>
    <string name="string_2154">Become a Brand Ambassador</string>
    <string name="string_2155">Tell your friends about hey abby</string>
</resources>