<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.cl.common_base.widget.FeatureTitleBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/string_2133" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="11dp"
                android:background="@color/lineBg"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/string_2133"

                android:textSize="14sp" />

            <com.cl.common_base.widget.FeatureItemView
                app:itemTitleBold="true"
                android:id="@+id/ft_rate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:itemTitle="@string/string_2145" />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/lineBg" />
            <com.cl.common_base.widget.FeatureItemView
                app:itemTitleBold="true"
                android:id="@+id/ft_us"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:itemTitle="@string/string_2146" />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/lineBg" />
            <com.cl.common_base.widget.FeatureItemView
                app:itemTitleBold="true"
                android:id="@+id/ft_discord"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:itemTitle="@string/string_2147" />

            <com.cl.common_base.widget.FeatureItemView
                app:itemTitleBold="true"
                android:id="@+id/ft_instagram"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:itemTitle="@string/string_2148" />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/lineBg" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="11dp"
                android:background="@color/lineBg"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/string_2149"

                android:textSize="14sp" />

            <com.cl.common_base.widget.FeatureItemView
                app:itemTitleBold="true"
                android:id="@+id/ft_heyabby"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:itemTitle="heyabby.com" />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/lineBg" />
            <com.cl.common_base.widget.FeatureItemView
                app:itemTitleBold="true"
                android:id="@+id/ft_terms"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:itemTitle="@string/string_1666" />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/lineBg" />
            <com.cl.common_base.widget.FeatureItemView
                app:itemTitleBold="true"
                android:id="@+id/ft_privacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:itemTitle="@string/string_1667" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="11dp"
                android:background="@color/lineBg"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/string_1591"

                android:textSize="14sp" />

            <com.cl.common_base.widget.FeatureItemView
                app:itemTitleBold="true"
                android:id="@+id/ft_become"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:itemTitle="@string/string_2154" />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/lineBg" />
            <com.cl.common_base.widget.FeatureItemView
                android:layout_marginBottom="50dp"
                app:itemTitleBold="true"
                android:id="@+id/ft_tell"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:itemTitle="@string/string_2155" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>