<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:background="@drawable/bg_round_tl_tr"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="right"
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="13dp"
            android:background="@mipmap/iv_close" />


        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/string_2005"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--滑动解锁按钮-->
        <com.cl.common_base.widget.slidetoconfirmlib.SlideToConfirm
            android:id="@+id/slide_to_confirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            app:border_radius="100dp"
            app:border_width="0dp"
            app:slider_background_color="#99006241"
            app:slider_color="@color/translucency_mainColor"
            app:slider_lottie="lottie_x.json"
            app:slider_image="@mipmap/home_unlock"
            app:slider_width="60dp"
            app:slider_reset_duration="300"
            app:slider_vibration_duration="50"
            app:slider_threshold="1dp"
            app:engage_text="@string/string_263"
            app:engage_text_size="18sp"
            app:engage_text_color="@android:color/white"
            app:completed_text="@string/string_2007"
            app:completed_text_color="@android:color/white"
            app:completed_text_size="18sp"
            android:layout_marginBottom="96dp"
            />


    </LinearLayout>
</layout>