<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="50dp"
        android:background="@drawable/bg_round_tl_tr"
        tools:ignore="MissingConstraints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:lineSpacingExtra="2dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/string_1479"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btn_ok"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:enabled="true"
            android:background="@drawable/create_state_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/string_10"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/tv_not_remind"
            android:layout_marginTop="10dp"
            android:text="@string/home_do_not_remind_me_again"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/btn_ok"
            app:layout_constraintStart_toStartOf="@+id/btn_ok"
            app:layout_constraintTop_toBottomOf="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>