<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:ignore="MissingConstraints"
        android:background="@drawable/background_white_r6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="28dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/iv_close"
            android:background="@mipmap/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:textStyle="bold"
            android:text="@string/award"
            app:layout_constraintBottom_toBottomOf="@+id/iv_close"
            app:layout_constraintTop_toTopOf="@+id/iv_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_close"
            android:id="@+id/rv_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            app:layout_constraintTop_toBottomOf="@+id/rv_reward"
            android:id="@+id/btn_success"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/create_state_button"
            android:text="@string/my_confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="@string/string_1393" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>