<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/iv_img"
            android:background="@mipmap/my_force_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingStart="14dp"
            android:paddingTop="15dp"
            android:paddingEnd="14dp"
            android:paddingBottom="5dp"
            tools:text="@string/home_are_you_sure_to_sign_out_of_account"
            android:textColor="@color/_xpopup_content_color"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/_xpopup_content_color"
            android:textColorHint="#999999"
            android:textSize="18sp"
            android:visibility="gone" />

        <View
            android:id="@+id/xpopup_divider1"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="20dp"
            android:background="@color/_xpopup_list_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/my_cancel"
                android:textColor="@color/mainColor"
                android:textSize="18sp" />

            <View
                android:id="@+id/xpopup_divider2"
                android:layout_width=".5dp"
                android:layout_height="match_parent"
                android:background="@color/_xpopup_list_divider" />

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/upgrade"
                android:textColor="@color/mainColor"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</layout>